// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text/> render text 1`] = `
<Text
  allowFontScaling={false}
  selectable={true}
  style={
    Array [
      Object {
        "fontFamily": "NunitoSans-Regular",
        "fontSize": 16,
      },
      undefined,
    ]
  }
>
  🔥
</Text>
`;

exports[`<Text/> render text with a bold font 1`] = `
<Text
  allowFontScaling={false}
  bold={true}
  selectable={true}
  style={
    Array [
      Object {
        "fontFamily": "NunitoSans-Bold",
        "fontSize": 16,
      },
      undefined,
    ]
  }
>
  🔥
</Text>
`;

exports[`<Text/> render text with a light font 1`] = `
<Text
  allowFontScaling={false}
  light={true}
  selectable={true}
  style={
    Array [
      Object {
        "fontFamily": "NunitoSans-Light",
        "fontSize": 16,
      },
      undefined,
    ]
  }
>
  🔥
</Text>
`;

exports[`<Text/> render text with extra props 1`] = `
<Text
  allowFontScaling={false}
  disabled={true}
  selectable={true}
  style={
    Array [
      Object {
        "fontFamily": "NunitoSans-Regular",
        "fontSize": 16,
      },
      undefined,
    ]
  }
  testID="text-with-some-props"
>
  🔥
</Text>
`;

exports[`<Text/> render text with style 1`] = `
<Text
  allowFontScaling={false}
  selectable={true}
  style={
    Array [
      Object {
        "fontFamily": "NunitoSans-Regular",
        "fontSize": 16,
      },
      Object {
        "fontSize": 30,
      },
    ]
  }
>
  🔥
</Text>
`;
